added dummy content

--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
 	<body>
     <header>
       <nav>
-        <h1><a href="#">Projects</a></h1> <!-- should only be one h1 per page.  Put title in h1 anchor that reloads the page -->
-        <a href="#"><img src=""></a> <!-- logo -->
+        <h1><a href="#">Projects</a></h1>
+        <a href="#"><img src=""></a> 
         <a href="index.html">Home</a>
         <a href="#">Projects</a>
         <a href="about.html">About</a>
