--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
 	<body>
     <header>
       <nav>
-        <h1><a href="#">About Me</a></h1> 
-        <a href="#"><img src=""></a>
+        <h1><a href="index.html"><img src="images/Portfolio.jpg" alt="Portfolio">My Portfolio</a></h1>
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="#">About</a>
