--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<body>
     <header>
       <nav>
-        <h1><a href="#">My Portfolio</a></h1>
-        <a href="#"><img src=""></a>
+        <h1><a href="index.html"><img src="images/Portfolio.jpg" alt="Portfolio">My Portfolio</a></h1>
         <a href="#">Home</a>
         <a href="projects.html">Projects</a>
         <a href="about.html">About</a>
