--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
     <header>
@@ -13,14 +14,12 @@
         <a href="#">About</a>
       </nav>
     </header>
-
     <article>
       <h2>Background</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum blandit neque, a mattis metus euismod et. Etiam velit arcu, posuere non sem sed, facilisis varius lorem. In ultrices ipsum nibh, sit amet lobortis ligula rutrum id. Maecenas at enim id magna varius hendrerit eget in neque. In viverra erat in augue vestibulum, ac sollicitudin nisl lacinia. Quisque iaculis sollicitudin arcu, non posuere ex placerat bibendum. Etiam eget lectus rhoncus nibh bibendum suscipit.</p>
 
       <h2>Hobbies</h2>
       <p>Sed ipsum lectus, consequat vel placerat sit amet, auctor posuere mauris. Phasellus porttitor justo volutpat egestas venenatis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla facilisi. Proin dapibus at augue ac volutpat. Nullam ac lectus dictum, porta sapien eu, pellentesque velit. Aliquam consequat diam sit amet accumsan semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel odio bibendum, venenatis libero eu, varius sapien. Maecenas a laoreet lorem. Sed fermentum lorem a mauris vulputate pharetra. Maecenas sit amet lacus sagittis, sagittis eros et, volutpat velit. Mauris sit amet tristique enim.</p>
-			
     </article>
     <footer> 
       Copyright Elizabeth, 2016
