--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
     <header>
@@ -13,7 +14,6 @@
         <a href="about.html">About</a>
       </nav>
     </header>
-
     <article> 
       <h2>Welcome to My Portfolio!</h2>
       <p>I have created several webpages that I would like to share with you.  Please visit my <a href="projects.html">Projects</a> page to see each project in more detail.</p>
