--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
+    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
     <header>
@@ -13,17 +14,21 @@
         <a href="about.html">About</a>
       </nav>
     </header>
-
-    <article>
-      <h1>Projects</h1>
-      <ul>
-        <li><h3>Veggies are Awesome!</h3><a href="../week1/semantic_tags/index.html" target="_blank"><img src="images/Veggie.jpeg" alt="Veggies are Awesome"/></a></li>
-        <li><h3>Project 2</h3><a href="www.project2.html" target = "_blank"><img src="images/Project-2.jpeg" alt="Project 2"/></a></li>
-        <li><h3>Project 3</h3><a href="www.project3.html" target = "_blank"><img src="images/Project-3.jpeg" alt="Project 3"/></a></li>
-      </ul>
-			
+    <article id="projects">
+      <h2>Projects</h2>
+      <div class="projects">
+        <h3>Veggies are Awesome!</h3>
+        <a href="../week1/semantic_tags/index.html" target="_blank"><img src="images/Veggie.jpeg" alt="Veggies are Awesome"/></a>
+      </div>
+      <div class="projects">
+        <h3>Project 2</h3>
+        <a href="www.project2.html" target = "_blank"><img src="images/Project-2.jpeg" alt="Project 2"/></a>
+      </div>
+      <div class="projects">
+        <h3>Project 3</h3>
+        <a href="www.project3.html" target = "_blank"><img src="images/Project-3.jpeg" alt="Project 3"/></a>
+      </div>    
     </article>
-
     <footer> 
       Copyright Elizabeth, 2016
     </footer>
