--- a/index.html
+++ b/index.html
@@ -18,13 +18,28 @@
       <a href="projects.html">Projects</a>
       <a href="about.html">About</a>
     </nav>
-    <main>
+    <main class="clearfix">
       <article> 
         <h2>Welcome to My Portfolio!</h2>
         <p>I have created several webpages that I would like to share with you.  Please visit my <a href="projects.html">Projects</a> page to see each project in more detail.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales commodo velit id aliquet. Nulla gravida lectus id mauris porta, at cursus ex cursus. Ut cursus ex ipsum, ut pharetra ipsum porta nec. Morbi non diam orci. Nulla facilisi. Etiam sit amet nisi odio. Suspendisse sapien lorem, hendrerit sit amet facilisis ac, egestas eget tellus. Nunc ac neque at ipsum condimentum consequat. Sed tempus consectetur dolor sollicitudin sollicitudin. Donec at fringilla tortor. Praesent condimentum sagittis diam, ac tincidunt augue eleifend a. Donec rhoncus lacinia metus at aliquam. Integer tincidunt ipsum sit amet nunc facilisis, eu luctus ipsum ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         <p>Praesent cursus lacus ut nisi elementum convallis. Quisque odio ante, tristique sed sagittis vitae, gravida at tellus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque a efficitur nisi. Fusce consequat risus ut orci dapibus tempor. Morbi venenatis massa non quam scelerisque, quis fringilla libero vulputate. Nunc accumsan enim ut lacus tempor vehicula. Fusce euismod, elit eu tincidunt gravida, massa elit scelerisque ex, a hendrerit dolor nunc non ex. Curabitur eu rhoncus nulla.</p>
       </article>
+      <aside>
+        <div id="bla">
+        <ol id="circles">
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+          <li><i class="fa fa-2x fa-diamond"></i> </li>
+        </ol>
+          </div>
+      </aside>
     </main>
     <footer class="dark clearfix">
       <p>Copyright Elizabeth, 2016</p>
