--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
+      <a href="dogs.html">The Dogs</a>
       <a href="about.html">About</a>
     </nav>
     <main>
