--- a/dogs.html
+++ b/dogs.html
@@ -88,11 +88,11 @@
                 <form>
                   <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="input" class="form-control" id="name" placeholder="Enter Name">
+                    <input class="form-control" id="name">
                   </div>
                   <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter Email">
+                    <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
                   </div>
                   <div class="checkbox">
                     <label>
